# template-pytorch-lightning-hydra-mlflow-poetry

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/logger/: mlflow.yaml
configs/optimizer/: adadelta.yaml  adagrad.yaml  adam.yaml  adamax.yaml  adamw.yaml  asgd.yaml  lbfgs.yaml  rmsprop.yaml  rprop.yaml  sgd.yaml  sparse_adam.yaml
configs/scheduler/: cosine_annealing.yaml  cosine_annealing_warm_restarts.yaml  cyclic.yaml  exponential.yaml  lambda.yaml  multi_step.yaml  multipricative.yaml  oncyclic.yaml  plateau.yaml  step.yaml
configs/trainer/: default.yaml
src/: data_module.py  dataset.py  experiment.py  model.py
